ops/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quantnest-frontend
  namespace: quantnest
  labels:
    app: quantnest-frontend
spec:
  replicas: 1

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
  selector:
    matchLabels:
      app: quantnest-frontend
  template:
    metadata:
      labels:
        app: quantnest-frontend
    spec:
      containers:
        - name: quantnest-frontend
          image: krishanand01/quantnest-frontend:v0c2d88d68b287e1be3d5f8d22672fe0210006f6b
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "5m"
              memory: "32Mi"
            limits:
              cpu: "100m"
              memory: "512Mi"
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 15

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10

          volumeMounts:
            - name: env-file
              mountPath: /app/apps/frontend/.env
              subPath: env

      volumes:
        - name: env-file
          secret:
            secretName: quantnest-frontend-env

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quantnest-backend
  namespace: quantnest
  labels:
    app: quantnest-backend

spec:
  replicas: 1

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0

  selector:
    matchLabels:
      app: quantnest-backend

  template:
    metadata:
      labels:
        app: quantnest-backend

    spec:
      containers:
        - name: quantnest-backend
          image: krishanand01/quantnest-backend:v0c2d88d68b287e1be3d5f8d22672fe0210006f6b
          imagePullPolicy: Always

          ports:
            - containerPort: 3000
            - containerPort: 9000
              name: ws

          resources:
            requests:
              cpu: "5m"
              memory: "32Mi"
            limits:
              cpu: "100m"
              memory: "512Mi"

          volumeMounts:
            - name: env-file
              mountPath: /app/apps/backend/.env
              subPath: env

      volumes:
        - name: env-file
          secret:
            secretName: quantnest-backend-env

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quantnest-executor
  namespace: quantnest
  labels:
    app: quantnest-executor

spec:
  replicas: 1

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0

  selector:
    matchLabels:
      app: quantnest-executor

  template:
    metadata:
      labels:
        app: quantnest-executor

    spec:
      restartPolicy: Always

      containers:
        - name: quantnest-executor
          image: krishanand01/quantnest-executor:v0c2d88d68b287e1be3d5f8d22672fe0210006f6b
          imagePullPolicy: Always

          resources:
            requests:
              cpu: "5m"
              memory: "32Mi"
            limits:
              cpu: "100m"
              memory: "512Mi"

          volumeMounts:
            - name: env-file
              mountPath: /app/apps/executor/.env
              subPath: env

      volumes:
        - name: env-file
          secret:
            secretName: quantnest-executor-env
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quantnest-ai-builder
  namespace: quantnest
  labels:
    app: quantnest-ai-builder

spec:
  replicas: 1

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0

  selector:
    matchLabels:
      app: quantnest-ai-builder

  template:
    metadata:
      labels:
        app: quantnest-ai-builder

    spec:
      restartPolicy: Always

      containers:
        - name: quantnest-ai-builder
          image: krishanand01/quantnest-ai-builder:v0c2d88d68b287e1be3d5f8d22672fe0210006f6b
          imagePullPolicy: Always
        
          ports:
            - containerPort: 3001

          resources:
            requests:
              cpu: "5m"
              memory: "32Mi"
            limits:
              cpu: "100m"
              memory: "512Mi"

          volumeMounts:
            - name: env-file
              mountPath: /app/apps/ai-builder/.env
              subPath: env

      volumes:
        - name: env-file
          secret:
            secretName: quantnest-ai-builder-env
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: quantnest

spec:
  replicas: 1

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0

  selector:
    matchLabels:
      app: redis

  template:
    metadata:
      labels:
        app: redis

    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          imagePullPolicy: Always

          ports:
            - containerPort: 6379

          resources:
            requests:
              cpu: "5m"
              memory: "32Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"

          volumeMounts:
            - name: redis-data
              mountPath: /data

      volumes:
        - name: redis-data
          emptyDir: {}
