ops/service.yml
apiVersion: v1
kind: Service
metadata:
  name: quantnest-frontend
  namespace: quantnest
spec:
  selector:
    app: quantnest-frontend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: quantnest-backend
  namespace: quantnest
spec:
  selector:
    app: quantnest-backend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
    - name: ws
      protocol: TCP
      port: 9000
      targetPort: 9000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: quantnest-ai-builder
  namespace: quantnest
spec:
  selector:
    app: quantnest-ai-builder
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3001
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: quantnest
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
